[tool.poetry]
name = "mcp-agent"
version = "0.1.0"
description = ""
authors = ["Jesus A Hernandez de Rojas <jhderojas@gmail.com>"]
readme = "README.md"
packages = [{include = "mcp_agent"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain-mcp-adapters = "^0.1.10"
langchain-core = "^0.3.76"
langgraph = "^0.6.8"
langchain-openai = "^0.3.33"
langchain-google-genai = "^2.1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
